discussion/kv_engine/181924/181924_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

AuditDescriptorManager::lookup return reference

All events we use in the system should be registered at
build time. We do allow "clients" to submit audit events,
but only from processes with the audit privilege which
is only granted to processes which is part of the TCB.

Change-Id: Ic9bcd7d86949c17b1dcd78af6187a55c7cc35c4f

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-10-27 07:51:06.000000000
Message: 
Uploaded patch set 4: Patch Set 3 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-10-27 09:00:19.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21529/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit.cc:149:5: error: use of undeclared identifier "event_filter" [clang-diagnostic-error]
    event_filter.withWLock([&rewrittenEventFilterJson](auto& filter) {
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit.cc:155:16: error: use of undeclared identifier "event_filter" [clang-diagnostic-error]
             (*event_filter.rlock())->to_json().dump());
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit.cc:284:14: error: use of undeclared identifier "event_filter" [clang-diagnostic-error]
    return (*event_filter.rlock())->clone();
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit.h:119:5: error: use of undeclared identifier "folly" [clang-diagnostic-error]
    folly::Synchronized<std::unique_ptr<AuditEventFilter>> event_filter;
    ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21529/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit.cc:149:5:
error: use of undeclared identifier "event_filter" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21529/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50750/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50750/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42597/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/auditd/src/audit.h:119:5:
error: use of undeclared identifier "folly"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42597/ )

CMake error: CMakeLists.txt:156 (MESSAGE) ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42597/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11260/ : FAILURE

Compile error at [2022-10-27T08:02:20.129Z] ../kv_engine/auditd/src/audit.h:119:5:
error: use of undeclared identifier "folly"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11260/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23565/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23565/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24805/ : FAILURE

ThreadSanitizer issue: signal-unsafe call inside of a signal (/opt/gcc-10.2.0/lib64/libtsan.so.0+0x33081) in __interceptor_malloc  ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24805/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23973/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23973/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31988/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31988/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/262/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/262/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22992/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22992/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11351/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11351/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20799/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
